--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
       <a href="https://chat.openai.com/?model=gpt-4" target="_blank" class="open-tokenizer">Open GPT-4</a>
     </div></div>
     <div class="form-group mt-4 w-10/12">
-      <label for="prompt-text" class="block text-gray-700 font-medium mb-3">Add a prompt:</label>
+      <label for="prompt-text" class="block text-gray-700 font-medium mb-3">Add a prompt</label>
       <textarea id="prompt-text" rows="3" class="form-control w-full rounded-lg"></textarea>
     </div>
 
     <div class="form-group mt-4 w-10/12">
-      <label for="text-area" class="block text-gray-700 font-medium mb-3">Paste your text:</label>
+      <label for="text-area" class="block text-gray-700 font-medium mb-3">Paste your text</label>
       <textarea id="text-area" rows="3" class="form-control w-full rounded-lg"></textarea>
     </div>
     <form id="splitter-form" class="my-4">
@@ -83,7 +83,7 @@
       </div> -->
 
       <div class="form-group mt-4">
-        <label for="chunk-size" class="block text-gray-700 font-medium mb-3">Chunk size:</label>
+        <label for="chunk-size" class="block text-gray-700 font-medium mb-3">Chunk size</label>
         <input id="chunk-size" type="number" value="13000" class="form-control" />
       </div>
 
