--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="GPT Text Splitter is a tool that allows you to split large bodies of text into smaller chunks, and append prompts for easy use with ChatGPT.">
+  <meta name="keywords" content="GPT Text Splitter, OpenAI, GPT-3.5, GPT-4, text splitter, text chunker, Natural Language Processing, Language model, Text segmentation, Text preprocessing, Sentence splitter, Paragraph splitter, Tokenization, Chunking, Text manipulation, Text organization, AI-assisted text splitting, Text analysis, Text extraction, Data preprocessing, Language understanding, Text formatting, Text mining, Text summarization, Text categorization, Text classification">
+
+
   <title>GPT Text Splitter</title>
 
   <!-- CSS only -->
