remove 'open' from buttons

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <div class="card py-5 text-center bg-gray-200 w-10/12 rounded-lg">
       <h2 class="mb-4 text-xl font-bold text-gray-800">Quick Links</h2>
       <div class="flex">
-      <a href="https://platform.openai.com/tokenizer" target="_blank" class="open-tokenizer mr-2">Open Tokenizer</a>
-      <a href="https://chat.openai.com/?model=text-davinci-002-render-sha" target="_blank" class="open-tokenizer mr-2">Open GPT-3.5</a>
-      <a href="https://chat.openai.com/?model=gpt-4" target="_blank" class="open-tokenizer">Open GPT-4</a>
+      <a href="https://platform.openai.com/tokenizer" target="_blank" class="open-tokenizer mr-2">Tokenizer</a>
+      <a href="https://chat.openai.com/?model=text-davinci-002-render-sha" target="_blank" class="open-tokenizer mr-2">GPT-3.5</a>
+      <a href="https://chat.openai.com/?model=gpt-4" target="_blank" class="open-tokenizer">GPT-4</a>
     </div></div>
     <div class="form-group mt-4 w-10/12">
       <label for="prompt-text" class="block text-gray-700 font-medium mb-3">Add a prompt</label>
